--- a/pages/dondeComprar.html
+++ b/pages/dondeComprar.html
@@ -44,7 +44,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <a href="https://accounts.binance.com/es/login"> <img src="../imagenes/Binance2.png" class="d-block w-100" alt="imagen extrachange binance"></a>
+                    <a href="https://accounts.binance.com/es/login"> <img src="../imagenes/logobinance.png" class="d-block w-100" alt="imagen extrachange binance"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Binance</h5>
                         <p>Binance es una buena opcion esta blockchain de intercambio de criptomonedas da los usuarios una plataforma para comerciar más de 100 activos digitales. Desde 2020, es considerada la plataforma de intercambio con el mayor volumen
@@ -52,14 +52,14 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <a href="https://www.ripio.com/ar/"> <img src="../imagenes/ripio.jpg" class="d-block w-100" alt="imagen extrachange ripio"></a>
+                    <a href="https://www.ripio.com/ar/"> <img src="../imagenes/logoripio.png" class="d-block w-100" alt="imagen extrachange ripio"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Ripio</h5>
                         <p>Comprá y vendé bitcoins y otras criptomonedas de forma rápida y simple. Somos la puerta de acceso al futuro de la economía digital.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <a href="https://www.coinbase.com/es "> <img src="../imagenes/coinbase.png" class="d-block w-100" alt="imagen extrachange coinbase"></a>
+                    <a href="https://www.coinbase.com/es "> <img src="../imagenes/coinbaselogo.png" class="d-block w-100" alt="imagen extrachange coinbase"></a>
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Coinbase</h5>
                         <p>Coinbase Inc. es una plataforma de comercio de criptomonedas con sede en San Francisco, California, que ofrece servicios de intercambio entre criptomonedas y monedas fiduciarias en alrededor de 32 países, así como almacenamiento
