--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                             <a class="nav-link active" aria-current="page" href="./pages/dondeComprar.html">Donde comprar</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./pages/suscribite.htm">Suscribite</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./pages/contacto.html">Contacto</a>
                         </li>
 
@@ -48,21 +51,21 @@
     <main class=" main__index container text-center pt-5">
         <section class="row">
             <h1 data-aos="fade-right" data-aos-duration="80000">Cripto Vida </h1>
-            <p class="main_p1"> Cripto es un espacio donde nos encontramos con la misión de permitir a todas las personas que comparte la pasión por las criptomondes aprender más sobre ello o compartir su experiencia. Como así también ayudar aquellos que quieran unirse a
-                introducirse a este nuevo mundo de la mejor manera. Desde ahora en más seremos compañeros en esta aventura de Cripto Pasion, espero que estén preparados para disfrutar mientras aprendemos.
-                <p>
+            <h2 class="main_p1">Cripto Vida es un espacio donde nos encontramos con la misión de permitir a todas las personas puedan adquirir el conocimiento necesario para invertir en criptomonedas como así también dar recomendaciones en cual invertir además dar códigos
+                promocionales para obtener código promocionales para nuestros blockchain recomendados, esto totalmente gratis solo tenes <a href="./pages/suscribite.htm"><button class="header__button">suscribirte</button></a>
+            </h2>
+            <h3 class="division m-5"> Si aun no estas convencido podes elegir alguna de las siguiente opciones:</h3>
+            <div class="contenido__index col-12 col-md 12 col-lg 6 m-3">
+                <h3 class=" body__p "> Si queres leer de que se trata el mundo de las criptomonedas antes suscribirte a Cripto Vida hace clip en la imagen de abajo</h3>
 
-                    <div class="contenido__index col-12 col-md 12 col-lg 6 m-3">
-                        <h3 class=" body__p "> Hace clip en esta imagen de abajo y empeza aprender mas de como vivir el mundo de las criptomonedas:</h3>
-
-                        <a href="./pages/info.html "><img data-aos="zoom-in-right" data-aos-duration="800000" data-aos-delay="100"  class="img-fluid div__imagen" " src="./imagenes/criptos2.jpg " alt="imagen de criptomondas ">
+                <a href="./pages/info.html "><img data-aos="zoom-in-right" data-aos-duration="800000" data-aos-delay="100"  class="img-fluid div__imagen" " src="./imagenes/criptos2.jpg " alt="imagen de criptomondas ">
                 </a>
-                    </div>
-                    <div class="contenido__index col-12 col-md 12 col-lg 6 m-3">
-                        <h3 class="body__p "> Hace clip en la imagen de abajo para saber en cual de las criptomonedas recominda cripto mundo inverir:</h3>
+            </div>
+            <div class="contenido__index col-12 col-md 12 col-lg 6 m-3">
+                <h3 class="body__p ">Si queres ver algunas de nuestra recomendaciones antes suscribirte a Cripto Vida </h3>
 
-                        <a href="./pages/recomendacion.html "><img data-aos="zoom-in-left" data-aos-duration="80000" data-aos-delay="100" class="img-fluid div__imagen" src="./imagenes/criptografico.png " alt="imagen de criptomondas "></a>
-                    </div>
+                <a href="./pages/recomendacion.html "><img data-aos="zoom-in-left" data-aos-duration="80000" data-aos-delay="100" class="img-fluid div__imagen" src="./imagenes/criptografico.png " alt="imagen de criptomondas "></a>
+            </div>
 
 
         </section>
