--- a/pages/dondeComprar.html
+++ b/pages/dondeComprar.html
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="recomendacion.html ">En cual invertir</a>
                         </li>
+                        <li class="nav-item look">
+                            <a class="nav-link active" aria-current="page" href="suscribite.htm">Suscribite</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                         </li>
@@ -36,6 +39,8 @@
         </nav>
     </header>
     <main class="carousel__dondecomprar">
+        Antes de ingresar a compra en cualquiera de estos navegadores suscribite a Cripto Vida y obtene un codigo de descuento exclusivo.
+
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
