--- a/pages/recomendacion.html
+++ b/pages/recomendacion.html
@@ -31,6 +31,9 @@
                             <a class="nav-link active" aria-current="page" href="dondeComprar.html ">Donde comprar</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="suscribite.htm">Suscribite</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="contacto.html">contacto</a>
                         </li>
 
