--- a/pages/suscribite.htm
+++ b/pages/suscribite.htm
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
@@ -20,24 +21,26 @@
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-
+                <span class="navbar-toggler-icon"></span>
+              </button>
                 <a class="navbar-brand" href=" ../index.html "><img src=".././imagenes/logo.jpg " alt="" width="30" height="24"></a>
+
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="info.html ">Info Criptos</a>
+                            <a class="nav-link active" aria-current="page" href="info.html">Info Criptos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="recomendacion.html ">En cual  Invertir</a>
+                            <a class="nav-link active" aria-current="page" href="recomendacion.html">En cual Invertir</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="dondeComprar.html ">Donde comprar</a>
+                            <a class="nav-link active" aria-current="page" href="dondeComprar.html">Donde comprar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="suscribite.htm">Suscribite</a>
+                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                         </li>
+
+
                     </ul>
 
                 </div>
@@ -45,27 +48,27 @@
         </nav>
     </header>
 
-    <div class="grilla__contacto">
-        <main class="contenidos ">
-            <div class="contenido"></div>
-            <h1 data-aos="fade-right" data-aos-duration="80000" class="contenido__titulo pt-5">Por favor rellene este formulario y nos contactaremos con usted:</h3>
-
-                <form data-aos="fade-down" class="contenido__sectionf" action=" " method="get " enctype="text/plain ">
-                    <label for="nameuser ">Nombre y Apellido</label>
+    <div class="grilla__suscribite">
+        <main class="suscripciones ">
+            <div class="suscripcion"></div>
+            <h1 data-aos="fade-right" data-aos-duration="80000" class="suscripcion__titulo pt-5">Completa el formulario y suscribite a Cripto Vida y obtene grandes beneficios</h3>
+                <form data-aos="fade-down" class="suscripcion__sectionf" action=" " method="get " enctype="text/plain ">
+                    <label for="nameuser ">Ingrese Nombre y Apellido</label>
                     <input type="text " name="nameuser " id="nameuser ">
-                    <label for="idcard ">Documento</label>
+                    <label for="idcard ">Ingrese Documento</label>
                     <input type="number " name="idcard " id="idcard ">
-                    <label for="mail ">Mail</label>
+                    <label for="mail ">Ingrese su Mail</label>
                     <input type="email " name="mail " id="mail ">
-                    <label for="textarea">Consulta o Sugerencia</label>
-                    <textarea class="textarea" name="consultas " id="Consultas " cols="30 " rows="10 "></textarea>
-                    <button class="contenido__boton">enviar</button>
+
+                    <button class="suscripcion__boton">Suscribite</button>
+                    <h3 class="suscripcion__aviso">Cuando envies tu suscripcion te enviaremos un mail de confirmacion para que empieces a tener beneficios exclusivos y informacion importante para invertir en criptomonedas</h3>
                 </form>
 
 
 
+
         </main>
-        <footer class="footer_pages pie__contacto bg-dark text-white pt-5 ">
+        <footer class="pie__sucripcion bg-dark text-white pt-5 ">
             <p> Cripto Vida todos los derechos reservados © Recordar que todas las criptomonedas estan sujetas a riesgo de mercado.Autor: Martin Utrera</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj " crossorigin="anonymous "></script>
