agregar map-get a la paginas, includi y extend

--- a/pages/info.html
+++ b/pages/info.html
@@ -91,6 +91,8 @@
             y el registro de las transacciones en el registro blockchain. En definitiva, minar criptomonedas supone resolver con éxito los problemas matemáticos que se presentan. Los mineros que lo han llevado a cabo obtienen a cambio criptomonedas.
         </p>
 
+        <h3 class="recordatorio">Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__info">suscribirte</button></a> </h3>
+
     </main>
 
     <footer class="footer_pages bg-dark text-white pt-5 ">
