--- a/pages/suscribite.htm
+++ b/pages/suscribite.htm
@@ -53,13 +53,12 @@
             <div class="suscripcion"></div>
             <h1 data-aos="fade-right" data-aos-duration="80000" class="suscripcion__titulo pt-5">Completa el formulario y suscribite a Cripto Vida y obtene grandes beneficios</h3>
                 <form data-aos="fade-down" class="suscripcion__sectionf" action=" " method="get " enctype="text/plain ">
-                    <label for="nameuser ">Ingrese Nombre y Apellido</label>
+                    <label for="nameuser ">Nombre y Apellido</label>
                     <input type="text " name="nameuser " id="nameuser ">
-                    <label for="idcard ">Ingrese Documento</label>
+                    <label for="idcard ">Documento</label>
                     <input type="number " name="idcard " id="idcard ">
-                    <label for="mail ">Ingrese su Mail</label>
+                    <label for="mail ">Mail</label>
                     <input type="email " name="mail " id="mail ">
-
                     <button class="suscripcion__boton">Suscribite</button>
                     <h3 class="suscripcion__aviso">Cuando envies tu suscripcion te enviaremos un mail de confirmacion para que empieces a tener beneficios exclusivos y informacion importante para invertir en criptomonedas</h3>
                 </form>
