--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="row">
             <h1 data-aos="fade-right" data-aos-duration="80000">Cripto Vida </h1>
             <h2 class="main_p1">Cripto Vida es un espacio donde nos encontramos con la misión de permitir a todas las personas puedan adquirir el conocimiento necesario para invertir en criptomonedas como así también dar recomendaciones en cual invertir además dar códigos
-                promocionales para obtener código promocionales para nuestros blockchain recomendados, esto totalmente gratis solo tenes <a href="./pages/suscribite.htm"><button class="header__button">suscribirte</button></a>
+                promocionales para obtener código promocionales para nuestros blockchain recomendados, esto totalmente gratis solo tenes que hacer clip a continuacion <a href="./pages/suscribite.htm"><button  data-aos="fade-right" data-aos-duration="80000" class="boton__index ">suscribite</button></a>
             </h2>
             <h3 class="division m-5"> Si aun no estas convencido podes elegir alguna de las siguiente opciones:</h3>
             <div class="contenido__index col-12 col-md 12 col-lg 6 m-3">
@@ -62,7 +62,7 @@
                 </a>
             </div>
             <div class="contenido__index col-12 col-md 12 col-lg 6 m-3">
-                <h3 class="body__p ">Si queres ver algunas de nuestra recomendaciones antes suscribirte a Cripto Vida </h3>
+                <h3 class="body__p ">Si queres ver algunas de nuestra recomendaciones antes suscribirte a Cripto Vida hace clip a la imagen de abajo </h3>
 
                 <a href="./pages/recomendacion.html "><img data-aos="zoom-in-left" data-aos-duration="80000" data-aos-delay="100" class="img-fluid div__imagen" src="./imagenes/criptografico.png " alt="imagen de criptomondas "></a>
             </div>
