agregar seo al proyecto

--- a/pages/recomendacion.html
+++ b/pages/recomendacion.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Criptovida: Recomendacion en cual criptomonedas invertir.">
+    <meta name="keywords" content="Criptovida, Criptomoneda, ,recomendacion inversion, beneficios, suscribite">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="../css/estilo.css">
@@ -61,7 +63,7 @@
                     con menos experiencia venden sus monedas desesperadamente cuando comienzan a ver números rojos. Sin embargo, los analistas del mercado criptográfico sugieren que esta caída es una zona de compra y no una de venta.
 
                 </p>
-                <p>Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__recomendacion">suscribite</button></a> </p>
+                <p>Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__recomendacion">suscríbete</button></a> </p>
             </div>
             <div class="cripto">
                 <h3>
@@ -74,7 +76,7 @@
                     análisis de Tradingview, la moneda digital Ether entró en un escenario bajista a corto plazo y es una oportunidad para acumular activos digitales.
 
                 </p>
-                <p>Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__recomendacion">suscribite</button></a> </p>
+                <p>Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__recomendacion">suscríbete</button></a> </p>
             </div>
             <div class="cripto">
                 <h3> Avalanche (AVAX) </h3>
@@ -84,7 +86,7 @@
                     Ethereum y la de Avalanche, ya que interconecta ambas redes.
 
                 </p>
-                <p>Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__recomendacion">suscribite</button></a> </p>
+                <p>Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__recomendacion">suscríbete</button></a> </p>
             </div>
             <div class="cripto ">
                 <h3>Polygon (Matic) </h3>
@@ -96,7 +98,7 @@
 
                 </p>
 
-                <p>Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__recomendacion">suscribite</button></a> </p>
+                <p>Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__recomendacion">suscríbete</button></a> </p>
             </div>
         </section>
     </main>
