--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Criptovida es una sitio que informa, recomienda y da beneficios para invertir en criptomonedas suscríbete ahora.">
+    <meta name="keywords" content="Criptovida, Criptomoneda, ,recomendacion, inversion, beneficios, suscribite">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
     <link rel="stylesheet" href="./css/estilo.css">
-    <title>Cripto Vida</title>
+    <title>Cripto Vida recibi informacion, recomendaciones y beneficios para invertir en criptomonedas suscribite ahora. </title>
 </head>
 
 <body>
