--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Criptovida:Contactanos podes dejar tu consulta y sugerencia.">
+    <meta name="keywords" content="Criptovida, Criptomoneda, contacto,consulta,sugerencia">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>Contacto</title>
+    <title>Criptovida Contactano deja tu consulta y sugerencias, te respoderemos a la brevedad</title>
 
 </head>
 
