--- a/pages/dondeComprar.html
+++ b/pages/dondeComprar.html
@@ -2,10 +2,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Criptovida:en cual blockchain invertir en criptomondas.">
+    <meta name="keywords" content="Criptovida, Criptomoneda, blockchain, beneficios, suscríbete">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>Donde Comprar Criptomonedas</title>
+    <title>Criptomonedas en cual blockchain invertir</title>
 </head>
 
 <body>
@@ -39,8 +41,7 @@
         </nav>
     </header>
     <main class="carousel__dondecomprar">
-        Antes de ingresar a compra en cualquiera de estos navegadores suscribite a Cripto Vida y obtene un codigo de descuento exclusivo.
-
+        <h1 class="titulo_dondecomprar"> Antes de ingresar a compra en cualquiera de estos blockchains suscribite a Cripto Vida y obtene un codigo de descuento exclusivo <a href="./suscribite.htm"><button class="boton__dondecomprar">suscríbete</button></a> </h1>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
