--- a/pages/info.html
+++ b/pages/info.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Criptovida: Infomate que son las criptomonedas y obtene mas informacion exclusiva suscribiendote ahora.Infámate que son las criptomonedas y obtener mas información exclusiva suscribiéndote ahora.">
+    <meta name="keywords" content="Criptovida, Informate criptomonedas , valor criptomonedas , tipos criptomonedas , minar criptomonedas  suscribite">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
     <link rel="stylesheet" href="../css/estilo.css">
-    <title>Criptos lo que hay que saber</title>
+    <title>Criptovida todo la informacion necesaria para invertir criptomonedas.</title>
 
 </head>
 
@@ -91,7 +93,7 @@
             y el registro de las transacciones en el registro blockchain. En definitiva, minar criptomonedas supone resolver con éxito los problemas matemáticos que se presentan. Los mineros que lo han llevado a cabo obtienen a cambio criptomonedas.
         </p>
 
-        <h3 class="recordatorio">Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__info">suscribirte</button></a> </h3>
+        <h3 class="recordatorio">Si queres mas informacion y obtener beneficios exclusivos de Criptovida has clip a continuacion <a href="./suscribite.htm"><button class="boton__info">suscríbete</button></a> </h3>
 
     </main>
 
